added forwarding from index to product.jsp

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -247,4 +247,8 @@ button.button:hover {
     display: none;
     overflow: hidden;
   }
+  a {
+    color: white; /* Textfarbe auf Weiß setzen */
+    text-decoration: none; /* Unterstreichung entfernen */
+}
 
