--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -145,7 +145,6 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 20px;
     width: 100%;
 }
 
@@ -184,29 +183,6 @@ footer {
     font-size: 2em;
     margin-bottom: 20px;
     text-align: center;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-.form-group {
-    margin-bottom: 20px;
-}
-
-.form-group label {
-    font-size: 1em;
-    margin-bottom: 5px;
-    display: block;
-}
-
-.form-group select {
-    padding: 10px;
-    font-size: 1em;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px solid #ccc;
 }
 
 button.button {
@@ -271,8 +247,8 @@ input {
     text-align: center;
 }
 .order-summary table {
-    margin: 0 auto; /* Zentriert die Tabelle horizontal */
-    width: 50%; /* Optional: Setzt die Breite der Tabelle auf 80% des Containers */
+    margin: 0 auto; 
+    width: 50%; 
     border-collapse: collapse;
 }
 .checkout-button {
@@ -281,4 +257,16 @@ input {
 .info {
     text-align: center;
 }
-
+.flex-container {
+    display: flex;
+}
+.flex-item {
+    margin: 10px;
+    padding: 10px;
+    background-color: #f4f4f4;
+}
+.total {
+	text-align:center;
+	padding: 20px;
+	
+}
