--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -232,6 +232,16 @@ a {
 }
 
 input {
+	margin: 10px;
+	padding: 10px;
+	font-size: 1em;
+	width: 100%;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+}
+
+select {
+	margin: 10px;
 	padding: 10px;
 	font-size: 1em;
 	width: 100%;
